crates/nash-can/tests/snapshots/kinds__pair_requires_big.snap
---
source: crates/nash-can/tests/kinds.rs
description: type alias p = pair int Int
---
[
    KindMismatch {
        region: Region {
            start: Position {
                line: 5,
                column: 21,
            },
            end: Position {
                line: 5,
                column: 24,
            },
        },
        context: TypeArg {
            head: Named(
                QualifiedName {
                    home: ModuleName {
                        package: Some(
                            PackageName {
                                author: "nash",
                                project: "core",
                            },
                        ),
                        name: "Builtin",
                    },
                    name: "pair",
                },
            ),
            index: 0,
        },
        expected: KindScheme {
            bounds: [],
            kind: Base(
                Big,
            ),
        },
        actual: KindScheme {
            bounds: [],
            kind: Base(
                Const,
            ),
        },
    },
]
