crates/nash-can/tests/snapshots/kinds__parameter_and_application_have_separate_representation_predicates.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype wrap 'f ('a : Storable) = Wrap (('f 'a) : Storable)\n"
---
(
    [
        (
            "wrap",
            Arrow(
                Arrow(
                    Type,
                    Type,
                ),
                Arrow(
                    Type,
                    Type,
                ),
            ),
            [
                Apply {
                    head: Located {
                        region: Region {
                            start: Position {
                                line: 6,
                                column: 39,
                            },
                            end: Position {
                                line: 6,
                                column: 41,
                            },
                        },
                        value: Var(
                            "f",
                        ),
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 6,
                                    column: 42,
                                },
                                end: Position {
                                    line: 6,
                                    column: 44,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                    ],
                },
                Implied {
                    trait_: QualifiedName {
                        home: ModuleName {
                            package: Some(
                                PackageName {
                                    author: "nash",
                                    project: "base",
                                },
                            ),
                            name: "Primitive",
                        },
                        name: "Storable",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 6,
                                    column: 15,
                                },
                                end: Position {
                                    line: 6,
                                    column: 17,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                    ],
                },
                Trait {
                    trait_: QualifiedName {
                        home: ModuleName {
                            package: Some(
                                PackageName {
                                    author: "nash",
                                    project: "base",
                                },
                            ),
                            name: "Primitive",
                        },
                        name: "Storable",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 6,
                                    column: 39,
                                },
                                end: Position {
                                    line: 6,
                                    column: 44,
                                },
                            },
                            value: App {
                                head: Located {
                                    region: Region {
                                        start: Position {
                                            line: 6,
                                            column: 39,
                                        },
                                        end: Position {
                                            line: 6,
                                            column: 41,
                                        },
                                    },
                                    value: Var(
                                        "f",
                                    ),
                                },
                                args: [
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 6,
                                                column: 42,
                                            },
                                            end: Position {
                                                line: 6,
                                                column: 44,
                                            },
                                        },
                                        value: Var(
                                            "a",
                                        ),
                                    },
                                ],
                            },
                        },
                    ],
                },
            ],
        ),
    ],
    [],
)
