crates/nash-can/tests/snapshots/kinds__parameter_annotation_is_checked_after_all_recursive_uses.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype Box 'a = Box 'a\ntype first ('a : Const) = First (second 'a)\ntype second 'a = Second (Box 'a) (first 'a)\n"
info: diagnostic
---
nash::names::contradictory_representation

  × The representation requirements on 'a are incompatible:
   ╭─[src/Main.nash:8:41]
 7 │ type first ('a : Const) = First (second 'a)
 8 │ type second 'a = Second (Box 'a) (first 'a)
   ·                                         ──
   ╰────
  help: Change the incompatible constraints or uses of this variable.
