crates/nash-can/tests/snapshots/kinds__partial_constructor_checks_closed_obligations.snap
---
source: crates/nash-can/tests/kinds.rs
description: "type self 'f = Self ('f 'f)\ntype p 'f 'a = P ('f 'f) 'a\ntype tag 'a = Tag\ntype w = W (tag (p self))"
---
[
    KindInfinite {
        region: Region {
            start: Position {
                line: 5,
                column: 25,
            },
            end: Position {
                line: 5,
                column: 27,
            },
        },
        context: LittleField {
            union: "self",
            ctor: "Self",
            index: 0,
        },
    },
    KindInfinite {
        region: Region {
            start: Position {
                line: 6,
                column: 22,
            },
            end: Position {
                line: 6,
                column: 24,
            },
        },
        context: LittleField {
            union: "p",
            ctor: "P",
            index: 0,
        },
    },
]
