crates/nash-can/tests/snapshots/kinds__partial_constructor_is_not_a_value_type.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\nvalue : list\nvalue = ()\nother : pair int\nother = ()\n"
info: diagnostic
---
nash::names::kind_mismatch

  × Kind mismatch in the annotation for `value`.
   ╭─[src/Main.nash:6:9]
 5 │ 
 6 │ value : list
   ·         ────
 7 │ value = ()
   ╰────
  help: Expected kind `Type`, found `Type -> Type`.

nash::names::kind_mismatch

  × Kind mismatch in the annotation for `other`.
   ╭─[src/Main.nash:8:9]
 7 │ value = ()
 8 │ other : pair int
   ·         ────────
 9 │ other = ()
   ╰────
  help: Expected kind `Type`, found `Type -> Type`.
