crates/nash-can/tests/snapshots/kinds__partial_constructor_projects_consumer_bounds_before_missing_arguments.snap
---
source: crates/nash-can/tests/kinds.rs
description: "type option 'a = None | Some 'a\ntype tag 'a = Tag\ntype s 'f 'g 'a = S ('g ('f 'a))\ntype w = W (tag (s s option))"
---
[
    KindMismatch {
        region: Region {
            start: Position {
                line: 8,
                column: 20,
            },
            end: Position {
                line: 8,
                column: 21,
            },
        },
        context: LittleField {
            union: "w",
            ctor: "W",
            index: 0,
        },
        expected: Type,
        actual: Arrow(
            Type,
            Type,
        ),
    },
]
