crates/nash-can/tests/snapshots/kinds__partial_constructor_rejects_a_higher_kinded_argument_mismatch.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype option 'a = None | Some 'a\ntype tag 'a = Tag\ntype s 'f 'g 'a = S ('g ('f 'a))\ntype w = W (tag (s s option))\n"
info: diagnostic
---
nash::names::kind_mismatch

  × Kind mismatch in field 1 of little constructor `W` in `w`.
   ╭─[src/Main.nash:9:20]
 8 │ type s 'f 'g 'a = S ('g ('f 'a))
 9 │ type w = W (tag (s s option))
   ·                    ─
   ╰────
  help: Expected kind `Type`, found `Type -> Type`.
